# Playwright-behave-api-ui-agent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Jenkinsfile  Personal-checks.txt  README.md  TASKS.md  allure_categories.json  behave.ini  docker-compose.yml  environment.py  pyproject.toml  run_tests.py  suggested-improvements.txt
.github/workflows/: ci.yml
agent/ai/: llm_client.py  multi_agent.py  selector_healer.py  test_generator.py
agent/integrations/: __init__.py  command_parser.py  notifier.py  teams.py  testrail_command.py  (+2 more)
ai/: llm_client.py  multi_agent.py  selector_healer.py  test_generator.py
config/: dev.yaml  prod.yaml  staging.yaml
docs/: Test_Automation_Plan_Gantt.xlsx  ai-test-framework-proposal.pptx  ai-test-generation-guide.md  testrail-integration-guide.md
e2e/: behave.ini  environment.py  pretty.output  run_tests.py
features/: ai.feature  api_testing.feature
helpers/: file_system.py
integrations/: command_parser.py  notifier.py  testrail_command.py  webhook_server.py  whatsapp.py
monitoring/: metrics.py
pages/: __init__.py  page_factory.py
plugins/: performance_plugin.py
resources/: config.yaml  requirements-dev.txt  requirements.txt
steps/: ai_steps.py  api_steps.py  data_driven_steps.py  performance_steps.py  vehicle_api_steps.py
test_data/: form_data.json  vehicle_api.json
tests/: __init__.py  conftest.py  test_case_sync.py  test_command_parser.py  test_payload_builder.py  test_response_matcher.py  test_teams.py  test_test_generator.py  test_testrail.py  test_vehicle_api_client.py  test_webhook_server.py  test_whatsapp.py
utils/: config_validator.py  logger.py  misc.py  preparation.py  prepration.py  reporting.py  retry.py
(+36 files in other folders)
